Frontend Code Commit

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DOMO</title>
+    <title>TRAFYCC</title>
 
     <!-- Bootstrap CSS -->
     <link
@@ -17,7 +17,7 @@
   <body>
     <div class="container" style="padding: -20px">
       <nav>
-        <div class="logo">DOMO</div>
+        <div class="logo">TRAFY<span style="color: #ff7335">CC</span></div>
         <div class="nav-links">
           <a href="index.html">• &nbsp; OUR AGENCY</a>
           <a href="about.html">
@@ -35,31 +35,58 @@
       <div class="about">
         <h1 class="about-title">About Us</h1>
         <p class="about-desc">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
+          At Trafycc, we believe that effective advertising is not about
+          reaching everyone—it's about reaching the right people. Founded with a
+          mission to transform how brands connect with their audience, Trafycc
+          is built on the power of precision, innovation, and measurable impact.
+          With over 10 years of experience in the digital advertising space,
+          we’ve helped over 1,000 brands grow and thrive by delivering
+          tailor-made campaigns designed for maximum engagement.
+        </p>
+
+        <h1 class="about-title">Our Story</h1>
+        <p class="about-desc">
+          Trafycc started with a simple idea: advertising should be smarter, not
+          louder. From our humble beginnings as a small start-up in San
+          Francisco, we’ve grown into a leading force in the advertising world,
+          driven by a passion for data-driven insights and creative excellence.
+          Today, with a dedicated team of over 200 marketing strategists,
+          analysts, and creatives, we’re committed to helping brands of all
+          sizes—from local businesses to global enterprises—reach their most
+          valuable audiences with pinpoint accuracy.
+        </p>
+
+        <h1 class="about-title">Why Choose Trafycc?</h1>
+        <p class="about-desc">
+          We don’t just run ads—we tell stories, build connections, and drive
+          results. At Trafycc, we pride ourselves on a 98% client retention
+          rate, a testament to our unwavering dedication to your success. We’re
+          not just your advertising partner; we’re an extension of your brand,
+          here to understand your unique needs and tailor strategies that align
+          with your goals.
         </p>
 
         <div class="vision-mission">
           <div>
             <h2 class="sub-title">Our Vision</h2>
             <p class="sub-desc">
-              Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
-              aut fugit, sed quia consequuntur magni dolores eos qui ratione
-              voluptatem sequi nesciunt.
+              To lead the future of digital advertising by merging innovative
+              technology with creative excellence, ensuring that every brand
+              connects meaningfully with its audience. We aim to set trends, not
+              follow them, helping our clients stay ahead in an ever-evolving
+              digital landscape.
             </p>
           </div>
 
           <div>
             <h2 class="sub-title">Our Mission</h2>
             <p class="sub-desc">
-              Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
-              aut fugit, sed quia consequuntur magni dolores eos qui ratione
-              voluptatem sequi nesciunt.
+              At Trafycc, our mission is to empower brands by delivering highly
+              targeted, data-driven advertising solutions that maximize ROI and
+              drive real-world results. We are committed to transforming the way
+              businesses connect with their audience through precision,
+              creativity, and measurable impact, creating campaigns that
+              resonate and deliver long-term success.
             </p>
           </div>
         </div>
@@ -68,7 +95,7 @@
       <div class="footer">
         <nav>
           <div class="logo">
-            DOMO
+            TRAFY<span style="color: #ff7335">CC</span>
             <!-- Add Logo here -->
           </div>
           <div class="footer-nav-links">
@@ -133,7 +160,7 @@
         <hr />
 
         <div class="footer-bottom">
-          <p class="copyright">© 2020-2024 DOMO. All rights reserved.</p>
+          <p class="copyright">© 2020-2024 TRAFYCC. All rights reserved.</p>
 
           <div class="newsletter">
             <h3 class="newsletter-subtitle">Our newsletter:</h3>
