--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DOMO</title>
+    <title>TRAFYCC</title>
 
     <!-- Bootstrap CSS -->
     <link
@@ -17,7 +17,7 @@
   <body>
     <div class="container">
       <nav>
-        <div class="logo">DOMO</div>
+        <div class="logo">TRAFY<span style="color: #ff7335">CC</span></div>
         <div class="nav-links">
           <a href="index.html">• &nbsp; OUR AGENCY</a>
           <a href="about.html"> • &nbsp; WHO WE ARE</a>
@@ -93,7 +93,7 @@
       <div class="footer">
         <nav>
           <div class="logo">
-            DOMO
+            TRAFY<span style="color: #ff7335">CC</span>
             <!-- Add Logo here -->
           </div>
           <div class="footer-nav-links">
@@ -158,7 +158,7 @@
         <hr />
 
         <div class="footer-bottom">
-          <p class="copyright">© 2020-2024 DOMO. All rights reserved.</p>
+          <p class="copyright">© 2020-2024 TRAFYCC. All rights reserved.</p>
 
           <div class="newsletter">
             <h3 class="newsletter-subtitle">Our newsletter:</h3>
