--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DOMO</title>
+    <title>TRAFYCC</title>
 
     <!-- Bootstrap CSS -->
     <link
@@ -17,7 +17,7 @@
   <body>
     <div class="container">
       <nav>
-        <div class="logo">DOMO</div>
+        <div class="logo">TRAFY<span style="color: #ff7335">CC</span></div>
         <div class="nav-links">
           <a href="index.html">
             <span style="color: #ff6b35">•</span> &nbsp; OUR AGENCY
@@ -35,31 +35,105 @@
       <div class="hero">
         <h1 class="hero-title">Advertise to Your Exact Audience</h1>
         <p class="hero-desc">
-          Sed sit amet sem vel orci maximus. Praesent a nisl non tincidunt.
+          Unlock the power of precise targeting and maximize your brand's
+          impact.
         </p>
         <a href="#" class="btn learn-more-btn">LEARN MORE</a>
 
-        <div class="icon-or-bg">
-          <!-- Add Logo here -->
+        <div class="hero-icon">
+          <img class="hero-img" src="./assets/home-banner.jpg" alt="icon" />
         </div>
       </div>
 
       <div class="how-to-start">
         <h1>How to start?</h1>
 
-        <div class="card-container">
-          <div class="card">
-            <p class="step-no">STEP 01</p>
-            <p class="step-title">
-              Preparation of individual promotion strategy
-            </p>
-            <p class="step-desc">
-              Maecenas at lobortis lorem integer eget dignissim libero non
-              luctus praesent ipsum suscipit.
-            </p>
+        <div class="card-container slider-container">
+          <div class="card slide" id="slide1">
+            <div class="step-icon-container">
+              <div class="step-details">
+                <p class="step-no">STEP 01</p>
+                <p class="step-title">
+                  Preparation of individual promotion strategy
+                </p>
+                <p class="step-desc">
+                  Maecenas at lobortis lorem integer eget dignissim libero non
+                  luctus praesent ipsum suscipit.
+                </p>
+              </div>
 
-            <div class="icon-or-bg">
-              <!-- Add Logo here -->
+              <div class="icon">
+                <img class="step-1-img" src="/assets/step-1.png" alt="icon-1" />
+              </div>
+            </div>
+
+            <div class="read-more">
+              <button class="btn read-more-btn">READ MORE &nbsp; ></button>
+            </div>
+          </div>
+
+          <div class="card slide" id="slide2">
+            <div class="step-icon-container">
+              <div class="step-details">
+                <p class="step-no">STEP 02</p>
+                <p class="step-title">
+                  Preparation of individual promotion strategy
+                </p>
+                <p class="step-desc">
+                  Maecenas at lobortis lorem integer eget dignissim libero non
+                  luctus praesent ipsum suscipit.
+                </p>
+              </div>
+
+              <div class="icon">
+                <img class="step-2-img" src="/assets/step-2.png" alt="icon-1" />
+              </div>
+            </div>
+
+            <div class="read-more">
+              <button class="btn read-more-btn">READ MORE &nbsp; ></button>
+            </div>
+          </div>
+
+          <div class="card slide" id="slide3">
+            <div class="step-icon-container">
+              <div class="step-details">
+                <p class="step-no">STEP 03</p>
+                <p class="step-title">
+                  Preparation of individual promotion strategy
+                </p>
+                <p class="step-desc">
+                  Maecenas at lobortis lorem integer eget dignissim libero non
+                  luctus praesent ipsum suscipit.
+                </p>
+              </div>
+
+              <div class="icon">
+                <img class="step-3-img" src="/assets/step-3.png" alt="icon-1" />
+              </div>
+            </div>
+
+            <div class="read-more">
+              <button class="btn read-more-btn">READ MORE &nbsp; ></button>
+            </div>
+          </div>
+
+          <div class="card slide" id="slide4">
+            <div class="step-icon-container">
+              <div class="step-details">
+                <p class="step-no">STEP 04</p>
+                <p class="step-title">
+                  Preparation of individual promotion strategy
+                </p>
+                <p class="step-desc">
+                  Maecenas at lobortis lorem integer eget dignissim libero non
+                  luctus praesent ipsum suscipit.
+                </p>
+              </div>
+
+              <div class="icon">
+                <img class="step-4-img" src="/assets/step-4.png" alt="icon-1" />
+              </div>
             </div>
 
             <div class="read-more">
@@ -68,34 +142,43 @@
           </div>
 
           <div class="bottom-layer">
-            <div class="up-arrow">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                height="45px"
-                viewBox="0 -960 960 960"
-                width="45px"
-                fill="#e8eaed"
-              >
-                <path
-                  d="m256-424-56-56 280-280 280 280-56 56-224-223-224 223Z"
-                />
-              </svg>
-            </div>
+            <button id="prev-btn">
+              <div class="up-arrow">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  height="45px"
+                  viewBox="0 -960 960 960"
+                  width="45px"
+                  fill="#e8eaed"
+                >
+                  <path
+                    d="m256-424-56-56 280-280 280 280-56 56-224-223-224 223Z"
+                  />
+                </svg>
+              </div>
+            </button>
+
             <hr />
-            <div class="down-arrow">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                height="50px"
-                viewBox="0 -960 960 960"
-                width="50px"
-                fill="#ff6b35"
-              >
-                <path
-                  d="M480-344 240-584l43-43 197 197 197-197 43 43-240 240Z"
-                />
-              </svg>
-            </div>
-            <p class="step-count">01 &nbsp; <span>/</span> &nbsp; 04</p>
+
+            <button id="next-btn">
+              <div class="down-arrow">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  height="50px"
+                  viewBox="0 -960 960 960"
+                  width="50px"
+                  fill="#ff6b35"
+                >
+                  <path
+                    d="M480-344 240-584l43-43 197 197 197-197 43 43-240 240Z"
+                  />
+                </svg>
+              </div>
+            </button>
+
+            <p class="step-count" id="slide-number">
+              <span> 01 / 04 </span>
+            </p>
           </div>
         </div>
       </div>
@@ -106,7 +189,7 @@
           Cras auctor turpis a nulla sollicitudin consectetur rutrum ligula
           elementum in sagittis velit sem.
         </p>
-        <a href="#" class="btn view-benefits-btn">VIEW BENEFITS</a>
+        <!-- <a href="#" class="btn view-benefits-btn">VIEW BENEFITS</a> -->
 
         <div class="graph">
           <!-- Add Logo here -->
@@ -185,36 +268,67 @@
         <div class="slider">
           <div class="client">
             <div class="client-card">
-              <div class="logo"></div>
+              <div class="logo">
+                <img
+                  src="./assets/client-1.png"
+                  alt="client"
+                  class="client-1"
+                />
+              </div>
             </div>
             <div class="name">MOMA APPS</div>
           </div>
 
           <div class="client">
             <div class="client-card">
-              <div class="logo"></div>
+              <div class="logo">
+                <img
+                  src="./assets/client-2.png"
+                  alt="client"
+                  class="client-2"
+                />
+              </div>
             </div>
             <div class="name">CARAMELIA PASTRIES</div>
           </div>
 
           <div class="client">
-            <div class="client-card active">
-              <div class="logo"></div>
-              <div class="view-case-study">View Case Study &nbsp; ></div>
+            <!-- <div class="client-card active"> -->
+            <div class="client-card">
+              <div class="logo">
+                <img
+                  src="./assets/client-3.png"
+                  alt="client"
+                  class="client-3"
+                />
+              </div>
+              <!-- <div class="view-case-study">View Case Study &nbsp; ></div> -->
             </div>
             <div class="name">Ray Brown</div>
           </div>
 
           <div class="client">
             <div class="client-card">
-              <div class="logo"></div>
+              <div class="logo">
+                <img
+                  src="./assets/client-4.png"
+                  alt="client"
+                  class="client-4"
+                />
+              </div>
             </div>
             <div class="name">BOGO APPS</div>
           </div>
 
           <div class="client">
             <div class="client-card">
-              <div class="logo"></div>
+              <div class="logo">
+                <img
+                  src="./assets/client-5.png"
+                  alt="client"
+                  class="client-5"
+                />
+              </div>
             </div>
             <div class="name">ARTA GALLERY</div>
           </div>
@@ -234,7 +348,7 @@
       <div class="footer">
         <nav>
           <div class="logo">
-            DOMO
+            TRAFY<span style="color: #ff7335">CC</span>
             <!-- Add Logo here -->
           </div>
           <div class="footer-nav-links">
@@ -299,7 +413,7 @@
         <hr />
 
         <div class="footer-bottom">
-          <p class="copyright">© 2020-2024 DOMO. All rights reserved.</p>
+          <p class="copyright">© 2020-2024 TRAFYCC. All rights reserved.</p>
 
           <div class="newsletter">
             <h3 class="newsletter-subtitle">Our newsletter:</h3>
@@ -317,6 +431,8 @@
         </div>
       </div>
     </div>
+
+    <script src="script.js"></script>
 
     <!-- Bootstrap JS and Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
