--- a/index.html
+++ b/index.html
@@ -336,10 +336,10 @@
 
         <div class="slider-navigation">
           <div class="nav-buttons">
-            <div class="nav-button"><</div>
-            <div class="nav-button">></div>
+            <div class="nav-button">&lt;</div>
+            <div class="nav-button">&gt;</div>
           </div>
-          <p class="step-count">03 &nbsp; <span>/</span> &nbsp; 05</p>
+          <p class="client-count">01 / 05</p>
         </div>
 
         <div class="clients-bg"></div>
