Removed Lorem Ipsum text

--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
                   Preparation of individual promotion strategy
                 </p>
                 <p class="step-desc">
-                  Maecenas at lobortis lorem integer eget dignissim libero non
-                  luctus praesent ipsum suscipit.
+                  A strategic promotional framework that will inform content
+                  development, website design, and marketing efforts, ensuring a
+                  cohesive brand message and effective outreach.
                 </p>
               </div>
 
@@ -77,11 +78,11 @@
               <div class="step-details">
                 <p class="step-no">STEP 02</p>
                 <p class="step-title">
-                  Preparation of individual promotion strategy
+                  Audience Identification and Segmentation
                 </p>
                 <p class="step-desc">
-                  Maecenas at lobortis lorem integer eget dignissim libero non
-                  luctus praesent ipsum suscipit.
+                  Create audience profiles that will guide targeted marketing
+                  efforts and messaging strategies across the website.
                 </p>
               </div>
 
@@ -99,12 +100,11 @@
             <div class="step-icon-container">
               <div class="step-details">
                 <p class="step-no">STEP 03</p>
-                <p class="step-title">
-                  Preparation of individual promotion strategy
-                </p>
+                <p class="step-title">Content Creation and Optimization</p>
                 <p class="step-desc">
-                  Maecenas at lobortis lorem integer eget dignissim libero non
-                  luctus praesent ipsum suscipit.
+                  A content-rich website that ranks well on search engines and
+                  resonates with the target audience, driving more organic
+                  traffic and engagement.
                 </p>
               </div>
 
@@ -122,12 +122,10 @@
             <div class="step-icon-container">
               <div class="step-details">
                 <p class="step-no">STEP 04</p>
-                <p class="step-title">
-                  Preparation of individual promotion strategy
-                </p>
+                <p class="step-title">Promotion and Outreach</p>
                 <p class="step-desc">
-                  Maecenas at lobortis lorem integer eget dignissim libero non
-                  luctus praesent ipsum suscipit.
+                  Increased website traffic and brand awareness, along with a
+                  stronger online presence through diverse promotional channels.
                 </p>
               </div>
 
@@ -186,8 +184,8 @@
       <div class="our-benefits">
         <h1>Our Benefits</h1>
         <p class="our-benefits-desc">
-          Cras auctor turpis a nulla sollicitudin consectetur rutrum ligula
-          elementum in sagittis velit sem.
+          We deliver tailored advertising solutions that drive measurable
+          results and elevate your brand’s impact.
         </p>
         <!-- <a href="#" class="btn view-benefits-btn">VIEW BENEFITS</a> -->
 
