Removed Lorem Ipsum text

--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
               />
             </svg>
 
-            <p href="mailto:info@domodummy.com">info@trafyccdummy.com</p>
+            <p href="mailto:info@domodummy.com">info@trafycc.com</p>
           </div>
 
           <div class="detail">
